Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBoolObjTextField.quorum
class Main
    Boolean v
    action Main
        v:SetValue(Test())
    end

    action Test() returns Boolean
        text var = "text"
        return var
    end
end